k8s/security/gatekeeper/template-deny-privileged.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sDenyPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyprivileged

        containers[c] {
          input.review.kind.kind == "Pod"
          c := input.review.object.spec.containers[_]
        }

        containers[c] {
          c := input.review.object.spec.template.spec.containers[_]
        }

        containers[c] {
          input.review.kind.kind == "Pod"
          c := object.get(input.review.object.spec, "initContainers", [])[_]
        }

        containers[c] {
          c := object.get(input.review.object.spec.template.spec, "initContainers", [])[_]
        }

        violation[{"msg": msg}] {
          c := containers[_]
          c.securityContext.privileged == true
          msg := sprintf("container %q cannot run as privileged", [c.name])
        }
