k8s/security/gatekeeper/template-require-resources.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequireresources
spec:
  crd:
    spec:
      names:
        kind: K8sRequireResources
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequireresources

        containers[c] {
          input.review.kind.kind == "Pod"
          c := input.review.object.spec.containers[_]
        }

        containers[c] {
          c := input.review.object.spec.template.spec.containers[_]
        }

        containers[c] {
          input.review.kind.kind == "Pod"
          c := object.get(input.review.object.spec, "initContainers", [])[_]
        }

        containers[c] {
          c := object.get(input.review.object.spec.template.spec, "initContainers", [])[_]
        }

        missing_resources(c) {
          not c.resources.requests.cpu
        }

        missing_resources(c) {
          not c.resources.requests.memory
        }

        missing_resources(c) {
          not c.resources.limits.cpu
        }

        missing_resources(c) {
          not c.resources.limits.memory
        }

        violation[{"msg": msg}] {
          c := containers[_]
          missing_resources(c)
          msg := sprintf("container %q must define requests/limits for cpu and memory", [c.name])
        }
